-- HealthHub schema for MySQL 8+
-- Generated from com.healthhub.service.Persistencia

CREATE DATABASE IF NOT EXISTS healthhub
  CHARACTER SET utf8mb4
  COLLATE utf8mb4_unicode_ci;

USE healthhub;

SET FOREIGN_KEY_CHECKS = 0;
DROP TABLE IF EXISTS NOTIFICACION;
DROP TABLE IF EXISTS ENTRADA_HISTORIAL;
DROP TABLE IF EXISTS HISTORIAL_CLINICO;
DROP TABLE IF EXISTS TURNO;
DROP TABLE IF EXISTS DISPONIBILIDAD;
DROP TABLE IF EXISTS EMPLEADO;
DROP TABLE IF EXISTS MEDICO;
DROP TABLE IF EXISTS PACIENTE;
SET FOREIGN_KEY_CHECKS = 1;

CREATE TABLE PACIENTE (
  DNI VARCHAR(20) PRIMARY KEY,
  NOMBRE VARCHAR(100) NOT NULL,
  APELLIDO VARCHAR(100) NOT NULL,
  TELEFONO VARCHAR(30) NOT NULL,
  OBRA_SOCIAL VARCHAR(100) NOT NULL
) ENGINE=InnoDB;

CREATE TABLE MEDICO (
  MATRICULA VARCHAR(20) PRIMARY KEY,
  NOMBRE VARCHAR(100) NOT NULL,
  APELLIDO VARCHAR(100) NOT NULL,
  ESPECIALIDAD VARCHAR(100) NOT NULL
) ENGINE=InnoDB;

CREATE TABLE EMPLEADO (
  LEGAJO VARCHAR(20) PRIMARY KEY,
  NOMBRE VARCHAR(100) NOT NULL,
  ROL VARCHAR(30) NOT NULL
) ENGINE=InnoDB;

CREATE TABLE DISPONIBILIDAD (
  ID BIGINT NOT NULL AUTO_INCREMENT,
  MATRICULA VARCHAR(20) NOT NULL,
  DIA INT NOT NULL,
  HORA_INICIO TIME NOT NULL,
  HORA_FIN TIME NOT NULL,
  PRIMARY KEY (ID),
  CONSTRAINT FK_DISPONIBILIDAD_MEDICO
    FOREIGN KEY (MATRICULA) REFERENCES MEDICO(MATRICULA)
    ON DELETE CASCADE
) ENGINE=InnoDB;

CREATE TABLE TURNO (
  ID VARCHAR(40) PRIMARY KEY,
  DNI_PACIENTE VARCHAR(20) NOT NULL,
  MATRICULA_MEDICO VARCHAR(20) NOT NULL,
  FECHA_HORA TIMESTAMP NOT NULL,
  ESTADO VARCHAR(30) NOT NULL,
  SOBRETURNO BOOLEAN NOT NULL,
  CONSTRAINT FK_TURNO_PACIENTE
    FOREIGN KEY (DNI_PACIENTE) REFERENCES PACIENTE(DNI)
    ON DELETE CASCADE,
  CONSTRAINT FK_TURNO_MEDICO
    FOREIGN KEY (MATRICULA_MEDICO) REFERENCES MEDICO(MATRICULA)
    ON DELETE CASCADE
) ENGINE=InnoDB;

CREATE TABLE HISTORIAL_CLINICO (
  DNI_PACIENTE VARCHAR(20) PRIMARY KEY,
  CONSTRAINT FK_HISTORIAL_PACIENTE
    FOREIGN KEY (DNI_PACIENTE) REFERENCES PACIENTE(DNI)
    ON DELETE CASCADE
) ENGINE=InnoDB;

CREATE TABLE ENTRADA_HISTORIAL (
  ID BIGINT NOT NULL AUTO_INCREMENT,
  DNI_PACIENTE VARCHAR(20) NOT NULL,
  FECHA TIMESTAMP NOT NULL,
  RESUMEN VARCHAR(4000) NOT NULL,
  DIAGNOSTICO VARCHAR(4000) NOT NULL,
  ESTUDIOS VARCHAR(4000) NOT NULL,
  PRIMARY KEY (ID),
  CONSTRAINT FK_ENTRADA_HISTORIAL
    FOREIGN KEY (DNI_PACIENTE) REFERENCES HISTORIAL_CLINICO(DNI_PACIENTE)
    ON DELETE CASCADE
) ENGINE=InnoDB;

CREATE TABLE NOTIFICACION (
  ID BIGINT NOT NULL AUTO_INCREMENT,
  LEGAJO VARCHAR(20) NOT NULL,
  MENSAJE VARCHAR(1000) NOT NULL,
  PRIMARY KEY (ID),
  CONSTRAINT FK_NOTIFICACION_EMPLEADO
    FOREIGN KEY (LEGAJO) REFERENCES EMPLEADO(LEGAJO)
    ON DELETE CASCADE
) ENGINE=InnoDB;
