erDiagram
    %% Esquema SQL de HealthHub (compatible con MySQL; runtime actual en H2 modo MySQL)
    EMPLEADO {
        string legajo PK
        string nombre
        string rol
    }

    PACIENTE {
        string dni PK
        string nombre
        string apellido
        string telefono
        string obraSocial
    }

    MEDICO {
        string matricula PK
        string nombre
        string apellido
        string especialidad
    }

    DISPONIBILIDAD {
        bigint id PK
        string matricula FK
        int dia
        time hora_inicio
        time hora_fin
    }

    TURNO {
        string id PK
        string dniPaciente FK
        string matriculaMedico FK
        datetime fechaHora
        string estado
        boolean sobreturno
    }

    HISTORIAL_CLINICO {
        string dniPaciente PK, FK
    }

    ENTRADA_HISTORIAL {
        bigint id PK
        string dniPaciente FK
        datetime fecha
        string resumen
        string diagnostico
        string estudios
    }

    NOTIFICACION {
        bigint id PK
        string legajo FK
        string mensaje
    }

    PACIENTE ||--|| HISTORIAL_CLINICO : posee
    HISTORIAL_CLINICO ||--o{ ENTRADA_HISTORIAL : contiene
    MEDICO ||--o{ DISPONIBILIDAD : define
    PACIENTE ||--o{ TURNO : solicita
    MEDICO ||--o{ TURNO : atiende
    EMPLEADO ||--o{ NOTIFICACION : recibe
